--- a/historia.html
+++ b/historia.html
@@ -163,7 +163,7 @@ Cada temporada que pasa, nuestra red de influencia crece. No medimos nuestro éx
 
 ---
 
-"No buscamos a los mejores, los hacemos mejores" - Victor Escalante Team Principal de Alpine Academy, desde T47 hasta hoy
+"No buscamos a los mejores, nosotros los hacemos" - Victor Escalante Team Principal de Alpine Academy, desde T47 hasta hoy
     </div>
   </main>
 
