--- a/index.html
+++ b/index.html
@@ -3,142 +3,202 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Alpine Academy</title>
+  <title>Alpine Academy Intercontinental Series</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: #f4f4f4;
+      background: #f4f4f9;
       color: #333;
     }
 
     header {
-      background: #001845;
+      background: #001F54;
       color: white;
-      padding: 15px;
-      text-align: center;
-      position: relative;
+      padding: 10px 20px;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
     }
 
-    /* Logo animado */
+    header h1 {
+      font-size: 1.5rem;
+    }
+
+    nav ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      gap: 15px;
+    }
+
+    nav ul li a {
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+      transition: color 0.3s;
+    }
+
+    nav ul li a:hover {
+      color: #FFD700;
+    }
+
+    /* Botón hamburguesa */
+    .menu-toggle {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+    }
+
+    .menu-toggle div {
+      width: 25px;
+      height: 3px;
+      background: white;
+      margin: 4px 0;
+    }
+
+    @media (max-width: 768px) {
+      nav ul {
+        display: none;
+        flex-direction: column;
+        background: #001F54;
+        position: absolute;
+        top: 60px;
+        right: 0;
+        width: 200px;
+        padding: 10px;
+      }
+
+      nav ul.show {
+        display: flex;
+      }
+
+      .menu-toggle {
+        display: flex;
+      }
+    }
+
+    /* Animación del logo */
     .logo {
-      width: 120px;
+      text-align: center;
+      margin: 30px 0;
+    }
+
+    .logo img {
+      width: 150px;
       animation: bounce 2s infinite;
     }
 
     @keyframes bounce {
       0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-15px); }
+      50% { transform: translateY(-20px); }
     }
 
-    /* Menú */
-    nav {
-      background: #003566;
+    /* Resumen */
+    .resumen {
+      text-align: center;
+      padding: 30px;
+      background: #e9ecef;
     }
 
-    .menu {
-      display: flex;
-      justify-content: center;
-      list-style: none;
-      margin: 0;
-      padding: 0;
+    .resumen h2 {
+      color: #001F54;
     }
 
-    .menu li {
-      margin: 0 15px;
-    }
-
-    .menu a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    .menu a:hover {
-      text-decoration: underline;
-    }
-
-    /* Hamburguesa */
-    .hamburger {
-      display: none;
-      font-size: 25px;
-      cursor: pointer;
-      position: absolute;
-      right: 20px;
-      top: 20px;
-    }
-
-    @media (max-width: 768px) {
-      .menu {
-        display: none;
-        flex-direction: column;
-        background: #003566;
-      }
-      .menu.active {
-        display: flex;
-      }
-      .hamburger {
-        display: block;
-      }
-    }
-
-    /* Secciones */
-    section {
+    /* Equipos */
+    .equipos {
       padding: 40px;
       text-align: center;
     }
 
-    section img {
-      max-width: 90%;
+    .equipos-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    .equipo {
+      background: white;
       border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-      margin-top: 15px;
-      transition: transform 0.4s ease, box-shadow 0.4s ease;
+      padding: 15px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
-    section img:hover {
+    .equipo img {
+      width: 100%;
+      max-width: 120px;
+      margin: auto;
+      display: block;
+      border-radius: 8px;
+    }
+
+    .equipo:hover {
       transform: scale(1.05);
-      box-shadow: 0 8px 16px rgba(0,0,0,0.4);
+      box-shadow: 0 8px 16px rgba(0,0,0,0.3);
     }
 
-    footer {
-      background: #001845;
-      color: white;
-      text-align: center;
-      padding: 20px;
-      margin-top: 30px;
+    /* Carrusel en móvil */
+    @media (max-width: 768px) {
+      .equipos-container {
+        display: flex;
+        overflow-x: auto;
+        gap: 15px;
+        scroll-snap-type: x mandatory;
+        -webkit-overflow-scrolling: touch;
+      }
+      .equipo {
+        flex: 0 0 auto;
+        width: 70%;
+        scroll-snap-align: center;
+      }
     }
 
     /* Redes sociales */
-    .social-links {
-      margin-top: 15px;
+    .social {
+      text-align: center;
+      padding: 20px;
+      background: #001F54;
     }
 
-    .social-links a {
+    .social a {
       margin: 0 10px;
       display: inline-block;
-      transition: transform 0.3s ease;
     }
 
-    .social-links a img {
-      width: 35px;
-      height: 35px;
-      filter: brightness(0) invert(1); /* blanco */
+    .social img {
+      width: 40px;
+      transition: transform 0.3s;
     }
 
-    .social-links a:hover {
+    .social img:hover {
       transform: scale(1.2);
+    }
+
+    footer {
+      text-align: center;
+      padding: 15px;
+      background: #001F54;
+      color: white;
     }
   </style>
 </head>
 <body>
   <header>
-    <img src="https://i.imgur.com/j2vi8Ln.jpeg" alt="Logo Alpine Academy" class="logo">
     <h1>Alpine Academy</h1>
-    <span class="hamburger" onclick="toggleMenu()">☰</span>
+    <div class="menu-toggle" id="menu-toggle">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
     <nav>
-      <ul class="menu" id="menu">
+      <ul id="menu">
         <li><a href="index.html">Inicio</a></li>
         <li><a href="historia.html">Historia</a></li>
         <li><a href="f1.html">F1</a></li>
@@ -151,61 +211,68 @@
     </nav>
   </header>
 
-  <section>
-    <h2>Bienvenidos a Alpine Academy</h2>
+  <section class="logo">
+    <img src="https://i.imgur.com/j2vi8Ln.jpeg" alt="Logo Alpine Academy">
+  </section>
+
+  <section class="resumen">
+    <h2>Bienvenidos a Alpine Academy Intercontinental Series</h2>
     <p>
-      Desde la Temporada 47, Alpine Academy se ha dedicado a formar campeones.  
-      No buscamos a los mejores: los hacemos mejores.  
-      Nuestro legado combina títulos en múltiples categorías con la formación de pilotos, CEOs y equipos que hoy brillan en toda la Intercontinental Series.
+      Somos un equipo dedicado al desarrollo de jóvenes talentos en el automovilismo virtual, 
+      participando en múltiples categorías de la Intercontinental Series de iGP Manager.  
+      Nuestra misión es formar pilotos, CEOs y equipos bajo los valores de trabajo en equipo, disciplina y pasión.
     </p>
   </section>
 
-  <section>
-    <h2>Equipo de F1</h2>
-    <img src="https://i.imgur.com/94qD5zk.png" alt="Equipo F1 Alpine">
+  <section class="equipos">
+    <h2>Nuestros Equipos</h2>
+    <div class="equipos-container">
+      <div class="equipo">
+        <a href="f1.html"><img src="https://i.imgur.com/94qD5zk.png" alt="F1"></a>
+        <p>F1</p>
+      </div>
+      <div class="equipo">
+        <a href="f2.html"><img src="https://i.imgur.com/qvAoPOr.jpeg" alt="F2"></a>
+        <p>F2</p>
+      </div>
+      <div class="equipo">
+        <a href="f3.html"><img src="https://i.imgur.com/FAFPTXN.jpeg" alt="F3"></a>
+        <p>F3</p>
+      </div>
+      <div class="equipo">
+        <a href="f4.html"><img src="https://i.imgur.com/mcIjDcB.jpeg" alt="F4"></a>
+        <p>F4</p>
+      </div>
+      <div class="equipo">
+        <a href="f5.html"><img src="https://i.imgur.com/pSAbA9h.jpeg" alt="F5"></a>
+        <p>F5</p>
+      </div>
+      <div class="equipo">
+        <a href="k6.html"><img src="https://i.imgur.com/UWHPu8R.jpeg" alt="K6"></a>
+        <p>K6</p>
+      </div>
+    </div>
   </section>
 
-  <section>
-    <h2>Equipo de F2</h2>
-    <img src="https://i.imgur.com/qvAoPOr.jpeg" alt="Equipo F2 Alpine">
-  </section>
-
-  <section>
-    <h2>Equipo de F3</h2>
-    <img src="https://i.imgur.com/FAFPTXN.jpeg" alt="Equipo F3 Alpine">
-  </section>
-
-  <section>
-    <h2>Equipo de F4</h2>
-    <img src="https://i.imgur.com/mcIjDcB.jpeg" alt="Equipo F4 Alpine">
-  </section>
-
-  <section>
-    <h2>Equipo de F5</h2>
-    <img src="https://i.imgur.com/pSAbA9h.jpeg" alt="Equipo F5 Alpine">
-  </section>
-
-  <section>
-    <h2>Equipo de K6</h2>
-    <img src="https://i.imgur.com/UWHPu8R.jpeg" alt="Equipo K6 Alpine">
+  <section class="social">
+    <a href="https://x.com/InterAlpineF1?t=L1JbvwO9liCdJ7yexqw3rQ&s=09" target="_blank">
+      <img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter">
+    </a>
+    <a href="https://youtube.com/@intercontinentalseries2023?si=YbuOCfPuFTGNfiZ3" target="_blank">
+      <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube">
+    </a>
   </section>
 
   <footer>
-    <p>© 2025 Alpine Academy - "No buscamos a los mejores, los hacemos mejores"</p>
-    <div class="social-links">
-      <a href="https://x.com/InterAlpineF1?t=L1JbvwO9liCdJ7yexqw3rQ&s=09" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/5968/5968830.png" alt="X (Twitter)">
-      </a>
-      <a href="https://youtube.com/@intercontinentalseries2023?si=YbuOCfPuFTGNfiZ3" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube">
-      </a>
-    </div>
+    <p>&copy; 2025 Alpine Academy Intercontinental Series - Proyecto basado en iGP Manager</p>
   </footer>
 
   <script>
-    function toggleMenu() {
-      document.getElementById('menu').classList.toggle('active');
-    }
+    const toggle = document.getElementById('menu-toggle');
+    const menu = document.getElementById('menu');
+    toggle.addEventListener('click', () => {
+      menu.classList.toggle('show');
+    });
   </script>
 </body>
 </html>
