--- a/f1.html
+++ b/f1.html
@@ -3,141 +3,74 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Alpine Academy - F1</title>
+  <title>Equipo F1 - Alpine Academy Intercontinental Series</title>
   <style>
     body {
-      margin: 0;
       font-family: Arial, sans-serif;
-      background: #f4f4f9;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f9;
       color: #333;
     }
 
-    /* Menú */
+    /* Header */
     header {
-      background: #001f3f;
-      color: white;
-      padding: 15px 20px;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
       display: flex;
-      justify-content: space-between;
       align-items: center;
+      padding: 10px 20px;
+      background-color: #001f3f;
+      color: white;
+    }
+
+    header img {
+      width: 50px;
+      height: auto;
+      margin-right: 10px;
     }
 
     header h1 {
-      margin: 0;
-      font-size: 20px;
-    }
-
-    nav {
-      display: flex;
-      gap: 15px;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    /* Menú hamburguesa */
-    .menu-toggle {
-      display: none;
-      flex-direction: column;
-      cursor: pointer;
-    }
-
-    .menu-toggle div {
-      width: 25px;
-      height: 3px;
-      background: white;
-      margin: 4px 0;
-    }
-
-    @media (max-width: 768px) {
-      nav {
-        display: none;
-        flex-direction: column;
-        background: #001f3f;
-        position: absolute;
-        top: 60px;
-        right: 0;
-        width: 200px;
-        padding: 10px;
-      }
-
-      nav.active {
-        display: flex;
-      }
-
-      .menu-toggle {
-        display: flex;
-      }
+      font-size: 1.2rem;
     }
 
     /* Secciones */
     section {
-      padding: 40px 20px;
+      padding: 20px;
     }
 
-    section h2 {
+    h2 {
+      border-bottom: 2px solid #001f3f;
+      padding-bottom: 5px;
+      margin-bottom: 15px;
       color: #001f3f;
-      margin-bottom: 20px;
-      text-align: center;
     }
 
-    /* Equipo */
-    .equipo {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      justify-content: center;
-      gap: 20px;
-      text-align: left;
-    }
-
-    .equipo img {
-      width: 200px;
-      max-width: 90%;
-      border-radius: 10px;
-      box-shadow: 0 6px 12px rgba(0,0,0,0.3);
-    }
-
-    .equipo-texto {
-      max-width: 500px;
-    }
-
-    /* Pilotos */
+    /* Tarjetas de pilotos */
     .pilotos {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
       gap: 20px;
-      justify-items: center;
     }
 
     .card {
-      background: linear-gradient(135deg, #001f3f, #003366);
-      border-radius: 20px;
-      padding: 20px;
-      width: 220px;
-      text-align: center;
+      background-color: #001f3f;
       color: white;
-      box-shadow: 0 6px 12px rgba(0,0,0,0.3);
-      transition: transform 0.3s ease;
-    }
-
-    .card:hover {
-      transform: scale(1.05);
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      text-align: center;
+      padding: 15px;
     }
 
     .card img {
-      width: 150px;
-      height: 150px;
+      width: 100%;
+      height: 220px;
       object-fit: cover;
-      border-radius: 50%;
-      border: 3px solid #fff;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.5);
+      border-radius: 8px;
+      margin-bottom: 10px;
+    }
+
+    .card h3 {
+      margin: 10px 0 5px;
     }
 
     .card p {
@@ -145,106 +78,66 @@
     }
 
     /* Trofeos */
-    .trofeos {
-      text-align: center;
-    }
-
     .trofeos ul {
       list-style: none;
       padding: 0;
     }
 
     .trofeos li {
-      margin: 8px 0;
-      font-weight: bold;
-    }
-
-    footer {
-      background: #001f3f;
-      color: white;
-      text-align: center;
-      padding: 15px 10px;
-      margin-top: 40px;
-    }
-
-    footer a {
-      color: #1da1f2;
-      margin: 0 10px;
-      text-decoration: none;
-    }
-
-    footer a.youtube {
-      color: #ff0000;
+      background: #eaeaea;
+      margin: 5px 0;
+      padding: 8px;
+      border-radius: 6px;
     }
   </style>
 </head>
 <body>
-  <!-- Header -->
   <header>
-    <h1>Alpine Academy - F1</h1>
-    <div class="menu-toggle" onclick="document.querySelector('nav').classList.toggle('active')">
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-    <nav>
-      <a href="index.html">Inicio</a>
-      <a href="f1.html">F1</a>
-      <a href="f2.html">F2</a>
-      <a href="f3.html">F3</a>
-      <a href="f4.html">F4</a>
-      <a href="f5.html">F5</a>
-      <a href="k6.html">K6</a>
-      <a href="historia.html">Historia</a>
-      <a href="trofeos.html">Trofeos</a>
-    </nav>
+    <img src="https://i.imgur.com/94qD5zk.png" alt="Logo F1">
+    <h1>Equipo F1 - Alpine Academy</h1>
   </header>
 
-  <!-- Equipo -->
   <section>
-    <h2>Equipo de F1</h2>
-    <div class="equipo">
-      <img src="https://i.imgur.com/94qD5zk.png" alt="Alpine F1">
-      <div class="equipo-texto">
-        <p>La escudería Alpine Academy F1 representa la máxima categoría de nuestra academia en la liga iGP Manager. Nuestro compromiso va más allá de competir: formamos pilotos y CEOs que dejan huella en cada temporada.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Pilotos -->
-  <section class="pilotos-section">
     <h2>Pilotos Titulares</h2>
     <div class="pilotos">
-      <!-- Piloto 1 -->
       <div class="card">
         <img src="https://i.imgur.com/PG5CErl.jpeg" alt="Victor Escalante">
-        <h3>Víctor Escalante</h3>
+        <h3>Victor Escalante</h3>
         <p>🇲🇽 México</p>
-        <p>Piloto Titular - F1</p>
+        <p>CEO & Piloto</p>
       </div>
 
-      <!-- Aquí se añadirán los demás pilotos -->
+      <div class="card">
+        <img src="https://i.imgur.com/Ju8Brg3.jpeg" alt="Evans">
+        <h3>Evans</h3>
+        <p>🇬🇧 Reino Unido</p>
+        <p>Piloto Titular</p>
+      </div>
+
+      <div class="card">
+        <img src="https://i.imgur.com/oHAIZNs.jpeg" alt="Mauro">
+        <h3>Mauro</h3>
+        <p>🇦🇷 Argentina</p>
+        <p>Piloto Titular</p>
+      </div>
+
+      <div class="card">
+        <img src="https://i.imgur.com/iZvs6Sq.jpeg" alt="Iván">
+        <h3>Iván</h3>
+        <p>🇪🇸 España</p>
+        <p>Piloto Titular</p>
+      </div>
     </div>
   </section>
 
-  <!-- Trofeos -->
   <section class="trofeos">
-    <h2>Trofeos Históricos en F1</h2>
+    <h2>Trofeos Históricos</h2>
     <ul>
-      <li>🏆 Campeón de Constructores T47</li>
-      <li>🏆 Campeón de Pilotos T48</li>
-      <li>🥈 Subcampeón de Constructores T49</li>
-      <li>🥉 Tercer Lugar de Pilotos T50</li>
-      <li>🏆 Campeón de Pilotos T52</li>
+      <li>🏆 Campeonato de Constructores T56</li>
+      <li>🏆 Campeonato de Pilotos T56</li>
+      <li>🥈 Subcampeonato de Pilotos T57</li>
+      <li>🥉 Podios múltiples en temporadas T55–T58</li>
     </ul>
   </section>
-
-  <!-- Footer -->
-  <footer>
-    <p>Síguenos en redes:</p>
-    <a href="https://x.com/InterAlpineF1?t=L1JbvwO9liCdJ7yexqw3rQ&s=09" target="_blank">Twitter/X</a> |
-    <a href="https://youtube.com/@intercontinentalseries2023?si=YbuOCfPuFTGNfiZ3" class="youtube" target="_blank">YouTube</a>
-    <p>&copy; 2025 Alpine Academy Intercontinental Series</p>
-  </footer>
 </body>
 </html>
