--- a/f1.html
+++ b/f1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Equipo F1 - Alpine Academy Intercontinental Series</title>
+  <title>Alpine Academy - F1</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -13,131 +13,212 @@
       color: #333;
     }
 
-    /* Header */
+    /* Menú */
     header {
+      background: #001f3f;
+      color: #fff;
+      padding: 10px 20px;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+    nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    nav .logo {
+      font-size: 1.2rem;
+      font-weight: bold;
+    }
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 15px;
+      margin: 0;
+      padding: 0;
+    }
+    nav ul li {
+      display: inline;
+    }
+    nav ul li a {
+      text-decoration: none;
+      color: #fff;
+      font-weight: bold;
+    }
+    .menu-toggle {
+      display: none;
+      font-size: 1.5rem;
+      cursor: pointer;
+    }
+
+    /* Contenido */
+    .container {
+      padding: 20px;
+      max-width: 1200px;
+      margin: auto;
+    }
+
+    /* Logo */
+    .logo-f1 {
       display: flex;
       align-items: center;
-      padding: 10px 20px;
-      background-color: #001f3f;
-      color: white;
+      gap: 20px;
     }
-
-    header img {
-      width: 50px;
+    .logo-f1 img {
+      width: 120px;
       height: auto;
-      margin-right: 10px;
     }
 
-    header h1 {
-      font-size: 1.2rem;
-    }
-
-    /* Secciones */
-    section {
-      padding: 20px;
-    }
-
-    h2 {
-      border-bottom: 2px solid #001f3f;
-      padding-bottom: 5px;
-      margin-bottom: 15px;
+    /* Título */
+    h1 {
       color: #001f3f;
     }
 
-    /* Tarjetas de pilotos */
+    /* Pilotos */
     .pilotos {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
       gap: 20px;
+      margin-top: 20px;
     }
-
-    .card {
-      background-color: #001f3f;
-      color: white;
-      border-radius: 12px;
-      overflow: hidden;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-      text-align: center;
+    .piloto {
+      background: #fff;
       padding: 15px;
+      border-radius: 12px;
+      text-align: center;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
-
-    .card img {
+    .piloto img {
       width: 100%;
       height: 220px;
       object-fit: cover;
-      border-radius: 8px;
+      border-radius: 12px;
       margin-bottom: 10px;
     }
-
-    .card h3 {
-      margin: 10px 0 5px;
+    .bandera {
+      font-size: 1.5rem;
+      margin-right: 5px;
     }
-
-    .card p {
+    .piloto h3 {
       margin: 5px 0;
+      font-size: 1.1rem;
     }
 
     /* Trofeos */
+    .trofeos {
+      margin-top: 30px;
+      padding: 15px;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+    .trofeos h2 {
+      color: #001f3f;
+      margin-bottom: 10px;
+    }
     .trofeos ul {
       list-style: none;
       padding: 0;
     }
-
-    .trofeos li {
-      background: #eaeaea;
+    .trofeos ul li {
       margin: 5px 0;
-      padding: 8px;
-      border-radius: 6px;
+      font-size: 1rem;
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      nav ul {
+        display: none;
+        flex-direction: column;
+        background: #001f3f;
+        position: absolute;
+        top: 50px;
+        right: 0;
+        width: 200px;
+        padding: 10px;
+      }
+      nav ul.showing {
+        display: flex;
+      }
+      .menu-toggle {
+        display: block;
+      }
+      .logo-f1 {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      .logo-f1 img {
+        width: 90px;
+      }
     }
   </style>
 </head>
 <body>
   <header>
-    <img src="https://i.imgur.com/94qD5zk.png" alt="Logo F1">
-    <h1>Equipo F1 - Alpine Academy</h1>
+    <nav>
+      <div class="logo">🏎 Alpine Academy</div>
+      <span class="menu-toggle">☰</span>
+      <ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="f1.html">F1</a></li>
+        <li><a href="f2.html">F2</a></li>
+        <li><a href="f3.html">F3</a></li>
+        <li><a href="f4.html">F4</a></li>
+        <li><a href="f5.html">F5</a></li>
+        <li><a href="k6.html">K6</a></li>
+        <li><a href="historia.html">Historia</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <section>
-    <h2>Pilotos Titulares</h2>
-    <div class="pilotos">
-      <div class="card">
-        <img src="https://i.imgur.com/PG5CErl.jpeg" alt="Victor Escalante">
-        <h3>Victor Escalante</h3>
-        <p>🇲🇽 México</p>
-        <p>CEO & Piloto</p>
-      </div>
-
-      <div class="card">
-        <img src="https://i.imgur.com/Ju8Brg3.jpeg" alt="Evans">
-        <h3>Evans</h3>
-        <p>🇬🇧 Reino Unido</p>
-        <p>Piloto Titular</p>
-      </div>
-
-      <div class="card">
-        <img src="https://i.imgur.com/oHAIZNs.jpeg" alt="Mauro">
-        <h3>Mauro</h3>
-        <p>🇦🇷 Argentina</p>
-        <p>Piloto Titular</p>
-      </div>
-
-      <div class="card">
-        <img src="https://i.imgur.com/iZvs6Sq.jpeg" alt="Iván">
-        <h3>Iván</h3>
-        <p>🇪🇸 España</p>
-        <p>Piloto Titular</p>
-      </div>
+  <div class="container">
+    <!-- Logo y título -->
+    <div class="logo-f1">
+      <img src="https://i.imgur.com/94qD5zk.png" alt="F1 Logo">
+      <h1>Equipo F1 - Alpine Academy</h1>
     </div>
-  </section>
 
-  <section class="trofeos">
-    <h2>Trofeos Históricos</h2>
-    <ul>
-      <li>🏆 Campeonato de Constructores T56</li>
-      <li>🏆 Campeonato de Pilotos T56</li>
-      <li>🥈 Subcampeonato de Pilotos T57</li>
-      <li>🥉 Podios múltiples en temporadas T55–T58</li>
-    </ul>
-  </section>
+    <!-- Pilotos -->
+    <section class="pilotos">
+      <div class="piloto">
+        <img src="https://i.imgur.com/PG5CErl.jpeg" alt="Victor Escalante">
+        <h3>🇲🇽 Victor Escalante</h3>
+      </div>
+      <div class="piloto">
+        <img src="https://i.imgur.com/oHAIZNs.jpeg" alt="Mauro Gentile">
+        <h3>🇦🇷 Mauro Gentile</h3>
+      </div>
+      <div class="piloto">
+        <img src="https://i.imgur.com/iZvs6Sq.jpeg" alt="Ivan Flamini">
+        <h3>🇦🇷 Ivan Flamini</h3>
+      </div>
+      <div class="piloto">
+        <img src="https://i.imgur.com/Ju8Brg3.jpeg" alt="Charles Evans">
+        <h3>🇲🇦 Charles Evans</h3>
+      </div>
+    </section>
+
+    <!-- Trofeos -->
+    <section class="trofeos">
+      <h2>🏆 Trofeos Históricos</h2>
+      <ul>
+        <li>🏆 Campeones de Constructores — T65</li>
+        <li>🏆 Campeones de Constructores — T66</li>
+        <li>🥈 Subcampeones de Pilotos — T67</li>
+        <li>🥉 Múltiples podios en temporadas consecutivas</li>
+      </ul>
+    </section>
+  </div>
+
+  <script>
+    // Menú hamburguesa
+    const toggle = document.querySelector('.menu-toggle');
+    const menu = document.querySelector('nav ul');
+
+    toggle.addEventListener('click', () => {
+      menu.classList.toggle('showing');
+    });
+  </script>
 </body>
 </html>
