--- a/f1.html
+++ b/f1.html
@@ -176,7 +176,7 @@
     <!-- Logo y título -->
     <div class="logo-f1">
       <img src="https://i.imgur.com/94qD5zk.png" alt="F1 Logo">
-      <h1>Equipo F1 - Alpine Academy</h1>
+      <h1>Equipo F1 - Alpine Royal Air Maroc</h1>
     </div>
 
     <!-- Pilotos -->
