--- a/f1.html
+++ b/f1.html
@@ -202,16 +202,36 @@
     </section>
 
     <!-- Trofeos -->
-    <section class="trofeos">
-      <h2>🏆 Trofeos Históricos</h2>
-      <ul>
-        <li>🏆 Campeones de Constructores — T65</li>
-        <li>🏆 Campeones de Constructores — T66</li>
-        <li>🥈 Subcampeones de Pilotos — T67</li>
-        <li>🥉 Múltiples podios en temporadas consecutivas</li>
-      </ul>
-    </section>
+    <section class="trophies py-10 bg-blue-900 text-white">
+  <div class="container mx-auto px-4">
+    <h2 class="text-3xl font-bold mb-6 text-center">🏆 Trofeos Históricos F1</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+      
+      <div class="bg-blue-800 p-6 rounded-2xl shadow-lg text-center">
+        <h3 class="text-xl font-semibold">Constructores</h3>
+        <p class="text-lg mt-2">🏆 2 Campeonatos</p>
+      </div>
+
+      <div class="bg-blue-800 p-6 rounded-2xl shadow-lg text-center">
+        <h3 class="text-xl font-semibold">Pilotos</h3>
+        <p class="text-lg mt-2">🏆 1 Campeonato</p>
+        <p class="text-lg mt-2">🥈 1 Subcampeonato</p>
+      </div>
+
+      <div class="bg-blue-800 p-6 rounded-2xl shadow-lg text-center">
+        <h3 class="text-xl font-semibold">Copas Internacionales</h3>
+        <p class="text-lg mt-2">🏆 1 Copa Libertadores</p>
+      </div>
+
+      <div class="bg-blue-800 p-6 rounded-2xl shadow-lg text-center col-span-1 md:col-span-2 lg:col-span-3">
+        <h3 class="text-xl font-semibold">Otros Logros</h3>
+        <p class="text-lg mt-2">⭐ Múltiples podios</p>
+      </div>
+
+    </div>
   </div>
+</section>
+
 
   <script>
     // Menú hamburguesa
