--- a/f2.html
+++ b/f2.html
@@ -3,171 +3,218 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>F2 - Alpine Academy Intercontinental Series</title>
+  <title>Citroën Alpine - F2</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
-      padding: 0;
-      background: #f9f9f9;
-      color: #333;
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      color: white;
     }
 
-    /* ----- HEADER ----- */
     header {
-      background: #3a3a3a;
-      color: #fff;
-      padding: 10px 20px;
+      background-color: #001f3f;
+      padding: 15px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      color: white;
       position: sticky;
       top: 0;
       z-index: 1000;
     }
-    header .container {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      max-width: 1200px;
-      margin: auto;
-    }
-    h1 {
+
+    header h1 {
+      font-size: 1.2rem;
       margin: 0;
-      font-size: 20px;
     }
 
-    /* ----- NAV ----- */
-    nav ul {
-      list-style: none;
+    nav {
       display: flex;
-      margin: 0;
-      padding: 0;
+      gap: 15px;
     }
-    nav ul li {
-      margin-left: 20px;
-    }
-    nav ul li a {
+
+    nav a {
       color: white;
       text-decoration: none;
       font-weight: bold;
     }
-    nav ul li a:hover {
+
+    nav a:hover {
       text-decoration: underline;
     }
 
-    /* ----- MENU HAMBURGUESA ----- */
     .menu-toggle {
       display: none;
-      font-size: 26px;
+      font-size: 1.5rem;
       cursor: pointer;
     }
 
-    /* ----- MAIN ----- */
-    main {
-      padding: 20px;
-      max-width: 1000px;
-      margin: auto;
-    }
-    section {
-      margin-bottom: 40px;
-    }
-    h2 {
-      color: #3a3a3a;
+    .logo {
+      max-width: 70px;
+      margin-right: 10px;
     }
 
-    /* ----- FOOTER ----- */
-    footer {
-      background: #3a3a3a;
-      color: white;
+    .content {
+      padding: 20px;
       text-align: center;
-      padding: 20px;
-    }
-    footer a {
-      color: #ff69b4;
-      text-decoration: none;
     }
 
-    /* ----- RESPONSIVE ----- */
+    .equipo-resumen {
+      background: #001f3f;
+      padding: 20px;
+      border-radius: 10px;
+      margin: 20px auto;
+      max-width: 800px;
+    }
+
+    .pilotos {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    .piloto {
+      background: #001f3f;
+      border-radius: 10px;
+      padding: 15px;
+      text-align: center;
+      color: white;
+    }
+
+    .piloto img {
+      width: 100%;
+      height: 250px;
+      object-fit: cover;
+      border-radius: 10px;
+    }
+
+    .piloto h3 {
+      margin: 10px 0 5px;
+    }
+
+    .bandera {
+      font-size: 1.5rem;
+    }
+
+    .trofeos {
+      margin-top: 40px;
+    }
+
+    .trofeos h2 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    .trofeo-lista {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 15px;
+    }
+
+    .trofeo {
+      background: #001f3f;
+      padding: 15px;
+      border-radius: 10px;
+      text-align: center;
+    }
+
     @media (max-width: 768px) {
-      nav ul {
+      nav {
         display: none;
         flex-direction: column;
-        background: #3a3a3a;
+        background: #001f3f;
         position: absolute;
         top: 60px;
         right: 0;
         width: 200px;
         padding: 10px;
       }
-      nav ul.showing {
+
+      nav.active {
         display: flex;
       }
+
       .menu-toggle {
         display: block;
       }
-      nav ul li {
-        margin: 10px 0;
+
+      .logo {
+        max-width: 50px;
       }
     }
   </style>
 </head>
 <body>
   <header>
-    <div class="container">
-      <h1>Alpine Academy - F2</h1>
-      <span class="menu-toggle">☰</span>
-      <nav>
-        <ul id="menu">
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="historia.html">Historia</a></li>
-          <li><a href="f1.html">F1</a></li>
-          <li><a href="f2.html">F2</a></li>
-          <li><a href="f3.html">F3</a></li>
-          <li><a href="f4.html">F4</a></li>
-          <li><a href="f5.html">F5</a></li>
-          <li><a href="trofeos.html">Trofeos</a></li>
-        </ul>
-      </nav>
+    <div style="display:flex; align-items:center;">
+      <img src="https://i.imgur.com/qvAoPOr.jpeg" alt="Logo F2" class="logo">
+      <h1>Citroën Alpine - F2</h1>
     </div>
+    <div class="menu-toggle">☰</div>
+    <nav>
+      <a href="index.html">Inicio</a>
+      <a href="f1.html">F1</a>
+      <a href="f2.html">F2</a>
+      <a href="f3.html">F3</a>
+      <a href="f4.html">F4</a>
+      <a href="f5.html">F5</a>
+      <a href="k6.html">K6</a>
+      <a href="historia.html">Historia</a>
+    </nav>
   </header>
 
-  <main>
-    <section>
-      <h2>Historia de la F2</h2>
-      <p>La <strong>Alpine Academy F2</strong> es el semillero estratégico de talentos. 
-      Es una de las categorías clave en el desarrollo de los pilotos que más tarde ascienden a la élite de la F1.  
-      Con un estilo propio marcado por el color gris con detalles en rosa y azul, la F2 ha sido sinónimo de constancia y trabajo en equipo.</p>
-    </section>
-
-    <section>
-      <h2>Pilotos Titulares</h2>
-      <ul>
-        <li>Victor Escalante – México</li>
-        <li>Ivan – Argentina</li>
-        <li>Mauro – Argentina</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>Trofeos de F2</h2>
-      <p>Puedes consultar los títulos obtenidos por esta categoría en la 
-        <a href="trofeos-f2.html">página de trofeos de F2</a>.
+  <div class="content">
+    <div class="equipo-resumen">
+      <h2>Resumen del Equipo</h2>
+      <p>
+        El equipo <strong>Citroën Alpine</strong>, ha logrado múltiples éxitos en la categoría y enviado a múltiples pilotos a F1, dando prueba de su calidad como academia.
       </p>
-    </section>
-  </main>
+    </div>
 
-  <footer>
-    <p>Alpine Academy Intercontinental Series – Basado en la liga Intercontinental Series del videojuego iGP Manager</p>
-    <p>Herederos: Leandro Fernández y Angelo Lemus</p>
-    <p>Síguenos en redes: 
-      <a href="#">Twitter</a> | 
-      <a href="#">Instagram</a>
-    </p>
-  </footer>
+    <h2>Pilotos Titulares</h2>
+    <div class="pilotos">
+      <div class="piloto">
+        <img src="https://i.imgur.com/Nsw57er.jpeg" alt="Victor Yanacon">
+        <h3>Victor Yanacon</h3>
+        <p>Argentina 🇦🇷</p>
+      </div>
+      <div class="piloto">
+        <img src="https://i.imgur.com/iZvs6Sq.jpeg" alt="Raul de Leon">
+        <h3>Raúl de León</h3>
+        <p>México 🇲🇽</p>
+      </div>
+      <div class="piloto">
+        <img src="https://i.imgur.com/bpOU2LQ.jpeg" alt="Angelo Lemus">
+        <h3>Angelo Lemus</h3>
+        <p>México 🇲🇽</p>
+      </div>
+      <div class="piloto">
+        <img src="https://i.imgur.com/cifqFkx.jpeg" alt="Renato Gaspar">
+        <h3>Renato Gaspar</h3>
+        <p>Brasil 🇧🇷</p>
+      </div>
+    </div>
+
+    <div class="trofeos">
+      <h2>Trofeos Históricos F2</h2>
+      <div class="trofeo-lista">
+        <div class="trofeo">T47 - Copa Pistón F2 - Carlos Vázquez</div>
+        <div class="trofeo">T56 - Copa Pistón F2 - Diolys Pedroza</div>
+        <div class="trofeo">T56 - WDC F2 - Diolys Pedroza</div>
+        <div class="trofeo">T57 - Copa Pistón F2 - Luis Rentería</div>
+        <div class="trofeo">T62 - Conference League - Citroën Alpine</div>
+        <div class="trofeo">T67 - Constructores F2 - Alpine</div>
+      </div>
+    </div>
+  </div>
 
   <script>
     const toggle = document.querySelector('.menu-toggle');
-    const menu = document.getElementById('menu');
+    const nav = document.querySelector('nav');
     toggle.addEventListener('click', () => {
-      menu.classList.toggle('showing');
+      nav.classList.toggle('active');
     });
   </script>
 </body>
