--- a/f2.html
+++ b/f2.html
@@ -59,23 +59,6 @@
       dando prueba de su calidad como academia.
     </p>
 
-    <!-- Trofeos -->
-    <section class="trophies bg-blue-900 text-white p-6 rounded-2xl shadow-lg mb-12">
-      <h2 class="text-2xl font-bold mb-4">🏆 Trofeos Históricos F2</h2>
-
-      <h3 class="font-semibold">Constructores</h3>
-      <p>🏆 1 Campeonato (T67)</p>
-
-      <h3 class="font-semibold">Pilotos</h3>
-      <p>🏆 1 Campeonato (T56)</p>
-
-      <h3 class="font-semibold">Copas Internacionales</h3>
-      <p>🏆 1 Conference League (T62)</p>
-
-      <h3 class="font-semibold">Otros Logros</h3>
-      <p>⭐ Múltiples Copas Pistón y podios</p>
-    </section>
-
     <!-- Pilotos -->
     <h2 class="text-2xl font-bold mb-6 text-blue-900">👨‍✈️ Pilotos Titulares</h2>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
@@ -84,30 +67,49 @@
       <div class="bg-blue-900 text-white p-4 rounded-xl shadow-lg text-center">
         <img src="https://i.imgur.com/Nsw57er.jpeg" alt="Victor Yanacon" class="w-32 h-32 object-cover rounded-full mx-auto mb-3 border-4 border-white">
         <h3 class="font-bold">Victor Yanacon</h3>
-        <p>🇦🇷 Argentina</p>
+        <p><img src="https://flagcdn.com/w20/ar.png" class="inline"> Argentina</p>
       </div>
 
       <!-- Raul de Leon -->
       <div class="bg-blue-900 text-white p-4 rounded-xl shadow-lg text-center">
         <img src="https://i.imgur.com/iZvs6Sq.jpeg" alt="Raul de Leon" class="w-32 h-32 object-cover rounded-full mx-auto mb-3 border-4 border-white">
         <h3 class="font-bold">Raul de Leon</h3>
-        <p>🇲🇽 México</p>
+        <p><img src="https://flagcdn.com/w20/mx.png" class="inline"> México</p>
       </div>
 
       <!-- Angelo Lemus -->
       <div class="bg-blue-900 text-white p-4 rounded-xl shadow-lg text-center">
         <img src="https://i.imgur.com/bpOU2LQ.jpeg" alt="Angelo Lemus" class="w-32 h-32 object-cover rounded-full mx-auto mb-3 border-4 border-white">
         <h3 class="font-bold">Angelo Lemus</h3>
-        <p>🇲🇽 México</p>
+        <p><img src="https://flagcdn.com/w20/mx.png" class="inline"> México</p>
       </div>
 
       <!-- Renato Gaspar -->
       <div class="bg-blue-900 text-white p-4 rounded-xl shadow-lg text-center">
         <img src="https://i.imgur.com/cifqFkx.jpeg" alt="Renato Gaspar" class="w-32 h-32 object-cover rounded-full mx-auto mb-3 border-4 border-white">
         <h3 class="font-bold">Renato Gaspar</h3>
-        <p>🇧🇷 Brasil</p>
+        <p><img src="https://flagcdn.com/w20/br.png" class="inline"> Brasil</p>
       </div>
     </div>
+
+    <!-- Trofeos -->
+    <section class="trophies bg-blue-900 text-white p-6 rounded-2xl shadow-lg mt-12">
+      <h2 class="text-2xl font-bold mb-4">🏆 Trofeos Históricos F2</h2>
+
+      <ul class="list-disc list-inside space-y-1">
+        <li>T47 - Copa Pistón F2 - Carlos Vázquez</li>
+        <li>T49 - Copa Pistón F2 - Dan Viturro</li>
+        <li>T56 - Conference League F2 - Cadillac Andretti</li>
+        <li>T56 - Copa Pistón F2 - Diolys Pedroza</li>
+        <li>T56 - Constructores F2 - Cadillac</li>
+        <li>T56 - WDC F2 - Diolys Pedroza</li>
+        <li>T57 - Conference League F2 - Andretti Cadillac</li>
+        <li>T57 - Copa Pistón F2 - Luis Rentería</li>
+        <li>T58 - Conference League F2 - Andretti</li>
+        <li>T62 - Conference League F2 - Citroën Alpine</li>
+        <li>T67 - Constructores F2 - Alpine</li>
+      </ul>
+    </section>
   </main>
 
   <!-- Footer -->
